--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/pro-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "classnames": "^2.3.2",
     "eslint-config-wesbos": "^4.0.1",
     "next": "14.0.3",
     "react": "^18",
