--- a/package.json
+++ b/package.json
@@ -11,28 +11,32 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/pro-duotone-svg-icons": "^6.5.2",
     "@fortawesome/pro-light-svg-icons": "^6.5.2",
     "@fortawesome/pro-regular-svg-icons": "^6.5.2",
     "@fortawesome/pro-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "classnames": "^2.3.2",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.1",
+    "@types/mdx": "^2.0.13",
+    "classnames": "^2.5.1",
     "eslint-config-wesbos": "^4.0.1",
-    "framer-motion": "^10.16.5",
-    "next": "14.0.3",
+    "framer-motion": "^11.0.28",
+    "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.0.5"
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^9",
+    "eslint-config-next": "14.2.1",
     "eslint-import-resolver-alias": "^1.1.2",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.4.3"
   }
 }
