--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/mdx": "^2.0.13",
     "classnames": "^2.5.1",
     "eslint-config-wesbos": "^4.0.1",
+    "fathom-client": "^3.6.0",
     "framer-motion": "^11.0.28",
     "next": "14.2.1",
     "react": "^18",
