--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@fortawesome/duotone-regular-svg-icons": "^6.7.2",
     "@fortawesome/duotone-thin-svg-icons": "^6.7.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/pro-regular-svg-icons": "^6.7.2",
+    "@fortawesome/pro-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
