--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "fathom-client": "^3.7.2",
     "lucide-react": "^0.475.0",
+    "motion": "^12.6.5",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
